<resources>
    <string name="app_name">课程表</string>
    <string name="app_description">NAU课程表组件</string>
    <string name="default_str">默认</string>
    <string name="monday">一</string>
    <string name="tuesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>
    <string name="sunday">日</string>
    <string name="week_num_text">第%1$d周</string>
    <string name="week_num_title">周数</string>
    <string name="current_week">当前周：第%1$d周</string>
    <string name="current_week_in_vacation">当前放假中</string>
    <string name="week_day_text">周%1$s</string>
    <string name="not_current_week">非本周</string>
    <string name="month_day">%1$d月%2$d日</string>
    <string name="month">%1$d月</string>
    <string name="in_vacation">放假中</string>
    <string name="not_this_week">[非本周]\n</string>
    <string name="course_text_with_location">%1$s\n\n@%2$s</string>
    <string name="about">关于</string>
    <string name="table_control">课表控制</string>
    <string name="version_title">版本</string>
    <string name="version">v%1$s(%2$d)</string>
    <string name="author">作者</string>
    <string name="author_name" translatable="false">XFY9326</string>
    <string name="load_courses">导入课程表</string>
    <string name="user_id">用户ID</string>
    <string name="user_password">SSO密码</string>
    <string name="login_error">登录失败！</string>
    <string name="data_get_error">登录失败！</string>
    <string name="loading">正在加载中… …</string>
    <string name="course_location">地点：%1$s</string>
    <string name="course_teacher">教师：%1$s</string>
    <string name="course_time">时间：第%1$s周 周%2$s 第%3$s节</string>
    <string name="course_odd_week_time">时间：第%1$s周 单周 周%2$s 第%3$s节</string>
    <string name="course_even_week_time">时间：第%1$s周 双周 周%2$s 第%3$s节</string>
    <string name="course_class">班级：%1$s</string>
</resources>
